Fixed overlapping with Spotify embed on release group page.

--- a/client/critiquebrainz/static/css/styles.less
+++ b/client/critiquebrainz/static/css/styles.less
@@ -232,12 +232,12 @@ img.avatar {
 a#write-review { margin-top: 20px; }
 a#edit-review { margin-top: 20px; }
 #release-group-details {
-  #left-panel {
+  #spotify-play-button, #cover-art {
     margin-top: 10px;
-    #spotify-play-button, #cover-art {
+    @media (max-width: @screen-xs-max) {
+      margin: 0 auto;
       display: flex;
       flex-direction: row;
-      margin: 0 auto;
     }
   }
 }
